Addding validations to Document metada upload

--- a/src/main/resources/static/document.html
+++ b/src/main/resources/static/document.html
@@ -44,8 +44,7 @@
 		<!-- Preview Metadata Modal -->
 		<div class="preview-modal" id="previewModal">
 			<div class="preview-modal-content">
-				<div class="preview-modal-header">Preview Metadata - Fill
-					Required Fields</div>
+				<div class="preview-modal-header">Preview Metadata</div>
 				<div class="preview-modal-body">
 					<table id="metadataTable" border="1">
 						<thead>
