--- a/src/main/resources/static/view.html
+++ b/src/main/resources/static/view.html
@@ -1,257 +1,245 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Letter Details</title>
   <style>
-	body {
-	  font-family: Arial, sans-serif;
-	  background: linear-gradient(to bottom right, #66b2ff, #99ccff); /* Light blue gradient */
-	  margin: 0;
-	  padding: 30px;
-	  color: #333;
-	}
-
-	.container {
-	  max-width: 900px;
-	  margin: auto;
-	  background: #f0f4f9;
-	  border-radius: 15px;
-	  box-shadow: 0px 8px 25px rgba(0,0,0,0.25);
-	  padding: 35px;
-	}
-
-
-
-    h2 {
-      text-align: center;
-      background: #004080;
-      color: #fff;
-      padding: 14px;
-      border-radius: 8px;
-      margin-bottom: 25px;
-      font-size: 22px;
-      letter-spacing: 0.5px;
-    }
-
-    .form-row {
-      display: flex;
-      gap: 20px;
-      margin-bottom: 18px;
-      flex-wrap: wrap;
-    }
-
-    .form-group {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      min-width: 250px;
-    }
-
-    label {
-      font-weight: bold;
-      margin-bottom: 6px;
-      color: #004080;
-    }
-
-    input[type="text"],
-    input[type="date"],
-    select,
-    textarea {
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 14px;
-      transition: 0.3s;
-    }
-
-    input:focus,
-    select:focus,
-    textarea:focus {
-      border-color: #007bff;
-      box-shadow: 0 0 5px rgba(0,123,255,0.4);
-      outline: none;
-    }
-
-    textarea {
-      resize: vertical;
-      min-height: 70px;
-    }
-
-    .reference-letters-list,
-    .see-attachments-section {
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      padding: 12px;
-      background: #f8f9fa;
-    }
-
-    .reference-letters-list ol {
-      margin: 0;
-      padding-left: 20px;
-    }
-
-    .reference-letters-list a {
-      color: #007bff;
-      text-decoration: none;
-    }
-
-    .reference-letters-list a:hover {
-      text-decoration: underline;
-    }
-
-    .button-row {
-      text-align: center;
-      margin-top: 25px;
-    }
-
-    .button-row button {
-      margin: 8px;
-      padding: 12px 26px;
-      border: none;
-      border-radius: 30px;
-      font-size: 15px;
-      cursor: pointer;
-      font-weight: bold;
-      color: #fff;
-      transition: all 0.3s ease;
-    }
-
-    .btn-attach { background: #28a745; }
-    .btn-attach:hover { background: #218838; }
-
-    .btn-reply { background: #007bff; }
-    .btn-reply:hover { background: #0056b3; }
-
-    .btn-cancel { background: #6c757d; }
-    .btn-cancel:hover { background: #5a6268; }
+    body{font-family:Arial,sans-serif;background:linear-gradient(to bottom right,#66b2ff,#99ccff);margin:0;padding:30px;color:#333}
+    .container{max-width:950px;margin:auto;background:#f0f4f9;border-radius:15px;box-shadow:0 8px 25px rgba(0,0,0,0.25);padding:30px}
+    h2{text-align:center;background:#004080;color:#fff;padding:14px;border-radius:8px;margin-bottom:25px;font-size:22px;letter-spacing:.5px}
+    .form-row{display:flex;gap:20px;margin-bottom:18px;flex-wrap:wrap}
+    .form-group{flex:1;display:flex;flex-direction:column;min-width:220px}
+    label{font-weight:bold;margin-bottom:6px;color:#004080}
+    input,select,textarea{padding:10px;border:1px solid #ccc;border-radius:6px;font-size:14px}
+    textarea{resize:vertical;min-height:70px}
+    .reference-letters-list,.see-attachments-section{border:1px solid #ccc;border-radius:6px;padding:12px;background:#fff}
+    .reference-letters-list ol{margin:0;padding-left:20px}
+    .reference-letters-list a{color:#007bff;text-decoration:none}
+    .reference-letters-list a:hover{text-decoration:underline}
+    .attachment-grid{display:flex;flex-wrap:wrap;gap:12px}
+    .attachment-card{width:170px;border:1px solid #ddd;border-radius:8px;padding:10px;background:#fafafa;display:flex;flex-direction:column;align-items:center;gap:8px}
+    .attachment-card img{width:150px;height:100px;object-fit:cover;border-radius:6px;cursor:pointer}
+    .attachment-name{font-size:13px;text-align:center}
+    .attachment-actions{display:flex;gap:8px}
+    .btn{padding:10px 20px;border:none;border-radius:30px;font-weight:bold;color:#fff;cursor:pointer}
+    .btn-attach{background:#28a745}.btn-reply{background:#007bff}.btn-cancel{background:#6c757d}
+    .btn-open{background:#007bff}.btn-download{background:#198754}
+    .button-row{text-align:center;margin-top:25px}
+    /* modal */
+    .img-modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,0.7);z-index:999}
+    .img-modal.open{display:flex}
+    .img-modal img{max-width:90%;max-height:85vh;border-radius:8px}
+    .modal-controls{margin-top:12px;display:flex;gap:10px;justify-content:center}
   </style>
 </head>
 <body>
+<div class="container">
+  <h2 id="pageTitle">Letter Details</h2>
 
-  <div class="container">
-    <h2>Letter Details - 12342</h2>
+  <form id="letterDetailsForm">
+    <div class="form-row">
+      <div class="form-group">
+        <label for="detailCategory">Category:</label>
+        <select id="detailCategory"></select>
+      </div>
+    </div>
 
-    <form id="letterDetailsForm">
-      <div class="form-row">
-        <div class="form-group">
-          <label for="detailCategory">Category:</label>
-          <select id="detailCategory" name="category">
-            <option value="">Select Category</option>
-            <option value="Contract">Contract</option>
-            <option value="Technical" selected>Technical</option>
-            <option value="Commercial">Commercial</option>
-            <option value="Legal">Legal</option>
-            <option value="Administrative">Administrative</option>
-          </select>
+    <div class="form-row">
+      <div class="form-group">
+        <label for="detailLetterNo">Letter No.:</label>
+        <input type="text" id="detailLetterNo" readonly>
+      </div>
+      <div class="form-group">
+        <label for="detailLetterDate">Letter Date:</label>
+        <input type="date" id="detailLetterDate">
+      </div>
+    </div>
+
+    <div class="form-row">
+      <div class="form-group">
+        <label for="detailFromField">Sender:</label>
+        <input type="text" id="detailFromField">
+      </div>
+      <div class="form-group">
+        <label for="detailToField">Copied To:</label>
+        <input type="text" id="detailToField">
+      </div>
+      <div class="form-group">
+        <label for="detailCcField">Cc:</label>
+        <input type="text" id="detailCcField">
+      </div>
+    </div>
+
+    <div class="form-row">
+      <div class="form-group">
+        <label for="detailDepartment">Department:</label>
+        <input type="text" id="detailDepartment">
+      </div>
+    </div>
+
+    <div class="form-row">
+      <div class="form-group">
+        <label>Reference Letters:</label>
+        <div class="reference-letters-list">
+          <ol id="referenceLetters"></ol>
         </div>
       </div>
+    </div>
 
-      <div class="form-row">
-        <div class="form-group">
-          <label for="detailLetterNo">Letter No.:</label>
-          <input type="text" id="detailLetterNo" value="12342" readonly>
-        </div>
-        <div class="form-group">
-          <label for="detailLetterDate">Letter Date:</label>
-          <input type="date" id="detailLetterDate" value="2025-09-11">
+    <div class="form-row">
+      <div class="form-group">
+        <label for="detailSubject">Subject:</label>
+        <textarea id="detailSubject"></textarea>
+      </div>
+    </div>
+
+    <div class="form-row">
+      <div class="form-group">
+        <label for="detailKeyInformation">Key Information:</label>
+        <textarea id="detailKeyInformation"></textarea>
+      </div>
+    </div>
+
+    <div class="form-row">
+      <div class="form-group">
+        <label for="detailRequiredResponse">Required Response:</label>
+        <select id="detailRequiredResponse">
+          <option value="">Select</option>
+          <option value="Yes">Yes</option>
+          <option value="No">No</option>
+          <option value="For Information">For Information</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="detailDueDate">Due Date:</label>
+        <input type="date" id="detailDueDate">
+      </div>
+    </div>
+
+    <div class="form-row">
+      <div class="form-group">
+        <label for="detailStatus">Current Status:</label>
+        <input type="text" id="detailStatus">
+      </div>
+    </div>
+
+    <div class="form-row">
+      <div class="form-group">
+        <label>See Attachments:</label>
+        <div class="see-attachments-section">
+          <div class="attachment-grid" id="attachmentGrid"></div>
         </div>
       </div>
+    </div>
 
-      <div class="form-row">
-        <div class="form-group">
-          <label for="detailFromField">Sender:</label>
-          <input type="text" id="detailFromField">
-        </div>
-        <div class="form-group">
-          <label for="detailToField">Copied To:</label>
-          <input type="text" id="detailToField" value="aman">
-        </div>
-      </div>
+    <div class="button-row">
+      <button type="button" class="btn btn-attach">Attach</button>
+      <button type="button" class="btn btn-reply">Reply</button>
+      <button type="button" class="btn btn-cancel">Cancel</button>
+    </div>
+  </form>
+</div>
 
-      <div class="form-row">
-        <div class="form-group">
-          <label for="detailCcField">Cc:</label>
-          <input type="text" id="detailCcField">
-        </div>
-        <div class="form-group">
-          <label for="detailDepartment">Department:</label>
-          <input type="text" id="detailDepartment">
-        </div>
-      </div>
-
-      <div class="form-row">
-        <div class="form-group">
-          <label>Reference Letters:</label>
-          <div class="reference-letters-list">
-            <ol>
-              <li><a href="#">MRVC-MVR-009</a></li>
-              <li><a href="#">MRVC-MVR-008</a></li>
-            </ol>
-          </div>
-        </div>
-      </div>
-
-      <div class="form-row">
-        <div class="form-group">
-          <label for="detailSubject">Subject:</label>
-          <textarea id="detailSubject"></textarea>
-        </div>
-      </div>
-
-      <div class="form-row">
-        <div class="form-group">
-          <label for="detailKeyInformation">Key Information:</label>
-          <textarea id="detailKeyInformation">sd</textarea>
-        </div>
-      </div>
-
-      <div class="form-row">
-        <div class="form-group">
-          <label for="detailRequiredResponse">Required Response:</label>
-          <select id="detailRequiredResponse">
-            <option value="">Select Response Type</option>
-            <option value="Yes">Yes</option>
-            <option value="No">No</option>
-            <option value="For Information">For Information</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label for="detailDueDate">Due Date:</label>
-          <input type="date" id="detailDueDate">
-        </div>
-      </div>
-
-      <div class="form-row">
-        <div class="form-group">
-          <label for="detailStatus">Current Status:</label>
-          <select id="detailStatus">
-            <option value="Sent" selected>Sent</option>
-            <option value="Draft">Draft</option>
-            <option value="Review">Review</option>
-            <option value="Approved">Approved</option>
-            <option value="Closed">Closed</option>
-          </select>
-        </div>
-      </div>
-
-      <div class="form-row">
-        <div class="form-group">
-          <label>See Attachments:</label>
-          <div class="see-attachments-section">
-            No attachments
-          </div>
-        </div>
-      </div>
-
-      <div class="button-row">
-        <button type="button" class="btn-attach">Attach</button>
-        <button type="button" class="btn-reply">Reply</button>
-        <button type="button" class="btn-cancel">Cancel</button>
-      </div>
-    </form>
+<!-- modal -->
+<div id="imgModal" class="img-modal">
+  <div style="text-align:center">
+    <img id="modalImg" src="" alt="preview">
+    <div class="modal-controls">
+      <a id="modalOpen" class="btn btn-open" target="_blank">Open</a>
+      <button id="modalDownload" class="btn btn-download">Download</button>
+      <button id="modalClose" class="btn btn-cancel">Close</button>
+    </div>
   </div>
+</div>
 
+<script>
+  const API_BASE = window.location.origin + '/api/correspondence';
+
+  function getQueryParam(name) {
+    return new URLSearchParams(window.location.search).get(name);
+  }
+  function toDateInput(v) {
+    if (!v) return '';
+    if (Array.isArray(v)) return `${v[0]}-${String(v[1]).padStart(2,'0')}-${String(v[2]).padStart(2,'0')}`;
+    return v;
+  }
+  function isImage(file) {
+    return /\.(png|jpe?g|gif|webp)$/i.test(file.fileName);
+  }
+
+  function fillForm(dto) {
+    document.getElementById('pageTitle').textContent = `Letter Details - ${dto.letterNumber||''}`;
+    document.getElementById('detailCategory').value = dto.category||'';
+    document.getElementById('detailLetterNo').value = dto.letterNumber||'';
+    document.getElementById('detailLetterDate').value = toDateInput(dto.letterDate);
+    document.getElementById('detailFromField').value = dto.sender||'';
+    document.getElementById('detailToField').value = dto.copiedTo||'';
+    document.getElementById('detailCcField').value = dto.ccRecipient||'';
+    document.getElementById('detailDepartment').value = dto.department||'';
+    document.getElementById('detailSubject').value = dto.subject||'';
+    document.getElementById('detailKeyInformation').value = dto.keyInformation||'';
+    document.getElementById('detailRequiredResponse').value = dto.requiredResponse||'';
+    document.getElementById('detailDueDate').value = toDateInput(dto.dueDate);
+    document.getElementById('detailStatus').value = dto.currentStatus||'';
+
+    // references
+    const refOl = document.getElementById('referenceLetters');
+    refOl.innerHTML='';
+    if (dto.refLetters) {
+      dto.refLetters.forEach(r=>{
+        const li=document.createElement('li');
+        li.textContent=r;
+        refOl.appendChild(li);
+      });
+    }
+
+    // attachments
+    const grid=document.getElementById('attachmentGrid');
+    grid.innerHTML='';
+    if(dto.files && dto.files.length){
+      dto.files.forEach(f=>{
+        const card=document.createElement('div');card.className='attachment-card';
+        if(isImage(f)){
+          const img=document.createElement('img');img.src=f.downloadUrl;img.alt=f.fileName;
+          img.onclick=()=>openModal(f.downloadUrl,f.fileName);
+          card.appendChild(img);
+        }
+        const name=document.createElement('div');name.className='attachment-name';name.textContent=f.fileName;
+        card.appendChild(name);
+
+        const actions=document.createElement('div');actions.className='attachment-actions';
+        const openBtn=document.createElement('button');openBtn.className='btn btn-open';openBtn.textContent='Open';
+        openBtn.onclick=()=>window.open(f.downloadUrl,'_blank');actions.appendChild(openBtn);
+        const dlBtn=document.createElement('button');dlBtn.className='btn btn-download';dlBtn.textContent='Download';
+        dlBtn.onclick=()=>downloadFile(f);actions.appendChild(dlBtn);
+        card.appendChild(actions);
+        grid.appendChild(card);
+      });
+    } else grid.innerHTML='<div class="attachment-name">No attachments</div>';
+  }
+
+  function downloadFile(f){
+    const a=document.createElement('a');
+    a.href=f.downloadUrl;a.download=f.fileName||'file';document.body.appendChild(a);a.click();a.remove();
+  }
+
+  // modal
+  const modal=document.getElementById('imgModal');
+  const modalImg=document.getElementById('modalImg');
+  const modalOpen=document.getElementById('modalOpen');
+  const modalDownload=document.getElementById('modalDownload');
+  const modalClose=document.getElementById('modalClose');
+  function openModal(url,fn){modalImg.src=url;modalOpen.href=url;modalDownload.onclick=()=>downloadFile({downloadUrl:url,fileName:fn});modal.classList.add('open');}
+  modalClose.onclick=()=>modal.classList.remove('open');
+
+  async function loadData(){
+    const id=getQueryParam('id');
+    if(!id){alert('No id');return;}
+    const res=await fetch(`${API_BASE}/view/${id}`);if(!res.ok){alert('Error');return;}
+    const dto=await res.json();fillForm(dto);
+  }
+  document.addEventListener('DOMContentLoaded',loadData);
+</script>
 </body>
 </html>
