Adding Document page filter and grid

--- a/src/main/resources/static/document.html
+++ b/src/main/resources/static/document.html
@@ -173,8 +173,8 @@
 								<th>
 									<div class="filter-container">
 										<input type="text" class="column-filter" data-column="9"
-											placeholder="Search" readonly> <span
-											class="filter-dropdown-toggle">▼</span>
+											placeholder="Search" readonly disabled> <span
+											class="filter-dropdown-toggle" disabled>▼</span>
 										<div class="filter-dropdown" data-column="9"></div>
 									</div>
 								</th>
@@ -205,146 +205,7 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr>
-								<td><span
-									class="file-type-label file-type-pdf file-name-cell">PDF</span></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value="MRVC-MVR..."></td>
-								<td><input type="text"
-									class="editable-input file-name-cell"
-									value="Contract Agreement"></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value="R01"></td>
-								<td><span class="status-final file-name-cell">Final</span></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value="Agreement"></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value="Contracts"></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value="Main Contract"></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value="Asif"></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value="14.07.2025"></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value="01.07.2025"></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value="Engineering"></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-							</tr>
-							<tr>
-								<td><span
-									class="file-type-label file-type-word file-name-cell">Word</span></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-							</tr>
-							<tr>
-								<td><span
-									class="file-type-label file-type-excel file-name-cell">Excel</span></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-							</tr>
-							<tr>
-								<td><span
-									class="file-type-label file-type-dwg file-name-cell">Dwg</span></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-							</tr>
-							<tr>
-								<td><span
-									class="file-type-label file-type-jpeg file-name-cell">Jpeg</span></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-								<td><input type="text"
-									class="editable-input file-name-cell" value=""></td>
-							</tr>
+							
 						</tbody>
 					</table>
 				</div>
