--- a/src/main/resources/static/document.html
+++ b/src/main/resources/static/document.html
@@ -486,6 +486,18 @@
 						<div class="error-message">This field is required</div>
 					</div>
 					<div class="upload-form-section">
+						<label>Project Name*:</label> <select id="projectName">
+							<option value="">Select Folder</option>
+						</select>
+						<div class="error-message">This field is required</div>
+					</div>
+					<div class="upload-form-section">
+						<label>Contract Name*:</label> <select id="contractName">
+							<option value="">Select Folder</option>
+						</select>
+						<div class="error-message">This field is required</div>
+					</div>
+					<div class="upload-form-section">
 						<label>Folder*:</label> <select id="folder">
 							<option value="">Select Folder</option>
 						</select>
