Adding bulk upload chages based on user id

--- a/src/main/resources/static/document.html
+++ b/src/main/resources/static/document.html
@@ -86,7 +86,8 @@
 								<th>File Name</th>
 								<th>Revision No.</th>
 								<th>Status</th>
-								<th>Document Type</th>
+								<th>Project Name</th>
+								<th>Contract Name</th>
 								<th>Folder</th>
 								<th>Sub-Folder</th>
 								<th>Created by</th>
@@ -200,6 +201,14 @@
 											placeholder="Search" readonly> <span
 											class="filter-dropdown-toggle">▼</span>
 										<div class="filter-dropdown" data-column="12"></div>
+									</div>
+								</th>
+								<th>
+									<div class="filter-container">
+										<input type="text" class="column-filter" data-column="12"
+											placeholder="Search" readonly> <span
+											class="filter-dropdown-toggle">▼</span>
+										<div class="filter-dropdown" data-column="13"></div>
 									</div>
 								</th>
 							</tr>
