--- a/src/main/resources/static/document.html
+++ b/src/main/resources/static/document.html
@@ -532,7 +532,7 @@
 					</div>
 					<div class="upload-form-section">
 						<label>Upload Document*:</label> <input type="file"
-							id="singleFileInput" multiple>
+							id="singleFileInput">
 						<div class="error-message">Please select at least one file</div>
 					</div>
 				</div>
