--- a/src/main/resources/static/document.html
+++ b/src/main/resources/static/document.html
@@ -81,6 +81,7 @@
 					<table class="document-table" id="mainTable">
 						<thead>
 							<tr>
+								<th style="display: none;">ID</th>
 								<th>File Type</th>
 								<th>File Number</th>
 								<th>File Name</th>
@@ -99,7 +100,7 @@
 
 							<!-- Enhanced Filter Row with Multi-Select Dropdowns -->
 							<tr class="filter-row">
-								<th>
+								<th style="display: none;">
 									<div class="filter-container">
 										<input type="text" class="column-filter" data-column="0"
 											placeholder="Search" readonly> <span
@@ -205,7 +206,15 @@
 								</th>
 								<th>
 									<div class="filter-container">
-										<input type="text" class="column-filter" data-column="12"
+										<input type="text" class="column-filter" data-column="13"
+											placeholder="Search" readonly> <span
+											class="filter-dropdown-toggle">▼</span>
+										<div class="filter-dropdown" data-column="13"></div>
+									</div>
+								</th>
+								<th>
+									<div class="filter-container">
+										<input type="text" class="column-filter" data-column="14"
 											placeholder="Search" readonly> <span
 											class="filter-dropdown-toggle">▼</span>
 										<div class="filter-dropdown" data-column="13"></div>
@@ -214,7 +223,7 @@
 							</tr>
 						</thead>
 						<tbody>
-							
+
 						</tbody>
 					</table>
 				</div>
@@ -324,7 +333,7 @@
 				<div class="upload-tabs">
 					<div class="upload-tab active" data-tab="single">Single
 						Update</div>
-					<div class="upload-tab" data-tab="bulk">Bulk Update</div>
+					<!--  <div class="upload-tab" data-tab="bulk">Bulk Update</div>-->
 				</div>
 
 				<!-- Single Update Tab -->
@@ -352,23 +361,24 @@
 							type="date" id="updateRevisionDate">
 						<div class="error-message">This field is required</div>
 					</div>
-
+					<div class="form-group">
+						<label for="updateFolder">Project Name*:</label> <select
+							id="updateProjectName">
+							<option value="">Select Project Name</option>
+						</select>
+						<div class="error-message">This field is required</div>
+					</div>
+					<div class="form-group">
+						<label for="updateFolder">Contract Name*:</label> <select
+							id="updateContractName">
+							<option value="">Select Contract Name</option>
+						</select>
+						<div class="error-message">This field is required</div>
+					</div>
 					<div class="form-group">
 						<label for="updateFolder">Folder*:</label> <select
 							id="updateFolder">
 							<option value="">Select Folder</option>
-							<option value="Drawing">Drawing</option>
-							<option value="Correspondence">Correspondence</option>
-							<option value="MOMs">MOMs</option>
-							<option value="Report">Report</option>
-							<option value="Work Programme">Work Programme</option>
-							<option value="Manuals">Manuals</option>
-							<option value="RFI">RFI</option>
-							<option value="Contracts">Contracts</option>
-							<option value="SHE">SHE</option>
-							<option value="Quality">Quality</option>
-							<option value="Billing">Billing</option>
-							<option value="Legal">Legal</option>
 						</select>
 						<div class="error-message">This field is required</div>
 					</div>
