Update Document feature

--- a/src/main/resources/static/document.html
+++ b/src/main/resources/static/document.html
@@ -175,8 +175,8 @@
 								<th>
 									<div class="filter-container">
 										<input type="text" class="column-filter" data-column="9"
-											placeholder="Search" readonly disabled> <span
-											class="filter-dropdown-toggle" disabled>▼</span>
+											placeholder="Search" readonly> <span
+											class="filter-dropdown-toggle">▼</span>
 										<div class="filter-dropdown" data-column="9"></div>
 									</div>
 								</th>
@@ -340,13 +340,13 @@
 				<div class="single-update-options active" id="singleUpdateTab">
 					<div class="form-group">
 						<label for="updateFileName">File Name*:</label> <input type="text"
-							id="updateFileName" placeholder="Enter file name">
+							id="updateFileName" placeholder="Enter file name" disabled>
 						<div class="error-message">This field is required</div>
 					</div>
 
 					<div class="form-group">
 						<label for="updateFileNumber">File Number*:</label> <input
-							type="text" id="updateFileNumber" placeholder="Enter file number">
+							type="text" id="updateFileNumber" placeholder="Enter file number" disabled>
 						<div class="error-message">This field is required</div>
 					</div>
 
