View / Download file

--- a/src/main/resources/static/document.html
+++ b/src/main/resources/static/document.html
@@ -191,8 +191,8 @@
 								<th>
 									<div class="filter-container">
 										<input type="text" class="column-filter" data-column="11"
-											placeholder="Search" readonly> <span
-											class="filter-dropdown-toggle">▼</span>
+											placeholder="Search" readonly disabled> <span
+											class="filter-dropdown-toggle" disabled>▼</span>
 										<div class="filter-dropdown" data-column="11"></div>
 									</div>
 								</th>
@@ -215,8 +215,8 @@
 								<th>
 									<div class="filter-container">
 										<input type="text" class="column-filter" data-column="14"
-											placeholder="Search" readonly> <span
-											class="filter-dropdown-toggle">▼</span>
+											placeholder="Search" readonly disabled> <span
+											class="filter-dropdown-toggle" disabled>▼</span>
 										<div class="filter-dropdown" data-column="13"></div>
 									</div>
 								</th>
