Adding more document functionality

--- a/src/main/resources/static/document.html
+++ b/src/main/resources/static/document.html
@@ -62,6 +62,32 @@
 			</div>
 		</div>
 
+
+		<!-- Preview Metadata Modal -->
+		<div class="version-modal" id="versionModal">
+			<div class="version-modal-content">
+				<div class="version-modal-header">Older Versions</div>
+				<div class="version-modal-body">
+					<table id="versionTable" border="1" class="version-table">
+						<thead>
+							<tr id="tableHeaderRow">
+								<td>File Name</td>
+								<td>File Number</td>
+								<td>Revision</td>
+								<td>View / Download</td>
+							</tr>
+						</thead>
+						<tbody id="versionBody">
+						</tbody>
+					</table>
+				</div>
+				<div class="preview-modal-buttons">
+					<button type="button" class="modal-btn btn-cancel"
+						id="cancelVersion">Cancel</button>
+				</div>
+			</div>
+		</div>
+		
 		<div class="main-content">
 			<div class="content-area">
 				<div class="upload-section">
