Adding feature of save as draft grid

--- a/src/main/resources/static/document.html
+++ b/src/main/resources/static/document.html
@@ -304,6 +304,8 @@
 			<div class="modal-header">Send Documents</div>
 			<div class="modal-body">
 				<div class="form-group">
+					<input type="hidden" id="sendDocumentId" name="sendDocumentId" />
+					<input type="hidden" id="sendDocId" name="sendDocId" />
 					<label for="sendTo">To: *</label> <input type="text" id="sendTo"
 						placeholder="Enter recipient email">
 						<input type="hidden" id="sendToUserId" name="sendToUserId" />
