--- a/src/main/resources/static/document.html
+++ b/src/main/resources/static/document.html
@@ -9,7 +9,8 @@
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css" />
+<link rel="stylesheet"
+	href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css" />
 <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 <!-- DataTables CSS -->
 <link rel="stylesheet"
@@ -17,7 +18,11 @@
 <!-- DataTables JS -->
 <script
 	src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
-</head>
+<!-- CSS for Select2 -->
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<!-- Select2 JS -->
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
 
 <body>
 	<div class="container">
@@ -305,17 +310,16 @@
 			<div class="modal-body">
 				<div class="form-group">
 					<input type="hidden" id="sendDocumentId" name="sendDocumentId" />
-					<input type="hidden" id="sendDocId" name="sendDocId" />
-					<label for="sendTo">To: *</label> <input type="text" id="sendTo"
-						placeholder="Enter recipient email">
-						<input type="hidden" id="sendToUserId" name="sendToUserId" />
+					<input type="hidden" id="sendDocId" name="sendDocId" /> <label
+						for="sendTo">To: *</label> <input type="text" id="sendTo"
+						placeholder="Enter recipient email"> <input type="hidden"
+						id="sendToUserId" name="sendToUserId" />
 					<div class="error-message">This field is required</div>
 				</div>
 
 				<div class="form-group">
-					<label for="sendCc">Cc:</label> <input type="text" id="sendCc"
-						placeholder="Enter CC email (optional)">
-						<input type="hidden" id="sendCcUserId" name="sendCcUserId" />
+					<label for="sendCc">Cc:</label>
+					<select id="sendCc" name="sendCc[]" multiple="multiple" style="width: 100%"></select>
 					<div class="error-message">Please enter a valid email address</div>
 				</div>
 
