reply button redirecting feature updated

--- a/src/main/resources/static/correspondance.html
+++ b/src/main/resources/static/correspondance.html
@@ -253,7 +253,20 @@
                             </select>
                         </div>
                     </div>
-
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="projectName">Project Name:</label>
+                            <select id="projectName" name="projectName">
+                                <option value="">Loading projects...</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="contractName">Contract Name:</label>
+                            <select id="contractName" name="contractName">
+                                <option value="">Loading contracts...</option>
+                            </select>
+                        </div>
+                    </div>
                     <div class="form-row">
                         <div class="form-group">
                             <label for="letterNo">Letter Number:</label>
@@ -390,9 +403,7 @@
                                 <option value="Administrative">Administrative</option>
                             </select>
                         </div>
-
                     </div>
-
                     <div class="form-row">
                         <div class="form-group">
                             <label for="detailLetterNo">Letter No.:</label>
