Fixing user name

--- a/src/main/resources/static/correspondance.html
+++ b/src/main/resources/static/correspondance.html
@@ -22,7 +22,7 @@
             MRVC
         </div>
         <h1>Document Management System</h1>
-        <div class="demo-badge">DEMO</div>
+        <div class="demo-badge" id="userName">DEMO</div>
     </header>
 
     <nav class="navigation">
