--- a/src/main/resources/static/document.html
+++ b/src/main/resources/static/document.html
@@ -32,7 +32,7 @@
 				MRVC
 			</div>
 			<h1>Document Management System</h1>
-			<div class="demo-badge">DEMO</div>
+			<div class="demo-badge" id="userName">DEMO</div>
 			<div id="successMessage" class="upload-success">Upload
 				Successful!</div>
 		</header>
