Adding JS code for data table

--- a/src/main/resources/static/correspondance.html
+++ b/src/main/resources/static/correspondance.html
@@ -63,7 +63,6 @@
 					<table class="document-table" id="mainTable">
 						<thead>
 							<tr>
-
 								<th>Category</th>
 								<th>Letter Number</th>
 								<th>From</th>
@@ -71,9 +70,12 @@
 								<th>Subject</th>
 								<th>Required Response</th>
 								<th>Due Date</th>
+								<th>Project Name</th>
+								<th>Contract Name</th>
 								<th>Status</th>
 								<th>Department</th>
 								<th>Attachment</th>
+								<th>Type</th>
 							</tr>
 
 							<!-- Enhanced Filter Row with Multi-Select Dropdowns -->
@@ -158,6 +160,30 @@
 										<div class="filter-dropdown" data-column="9"></div>
 									</div>
 								</th>
+								<th>
+									<div class="filter-container">
+										<input type="text" class="column-filter" data-column="9"
+											placeholder="Search" readonly> <span
+											class="filter-dropdown-toggle">▼</span>
+										<div class="filter-dropdown" data-column="10"></div>
+									</div>
+								</th>
+								<th>
+									<div class="filter-container">
+										<input type="text" class="column-filter" data-column="9"
+											placeholder="Search" readonly> <span
+											class="filter-dropdown-toggle">▼</span>
+										<div class="filter-dropdown" data-column="11"></div>
+									</div>
+								</th>
+								<th>
+									<div class="filter-container">
+										<input type="text" class="column-filter" data-column="9"
+											placeholder="Search" readonly> <span
+											class="filter-dropdown-toggle">▼</span>
+										<div class="filter-dropdown" data-column="12"></div>
+									</div>
+								</th>
 
 							</tr>
 
@@ -190,11 +216,15 @@
 								<td><input type="text" class="editable-input" value=""></td>
 								<td><input type="text" class="editable-input" value=""></td>
 								<td><input type="text" class="editable-input" value=""></td>
+								<td><input type="text" class="editable-input" value=""></td>
+								<td><input type="text" class="editable-input" value=""></td>
 							</tr>
 
 
 							<tr>
 								<td><span class="file-type-label file-type-pdf"></span></td>
+								<td><input type="text" class="editable-input" value=""></td>
+								<td><input type="text" class="editable-input" value=""></td>
 								<td><input type="text" class="editable-input" value=""></td>
 								<td><input type="text" class="editable-input" value=""></td>
 								<td><input type="text" class="editable-input" value=""></td>
