Fixing Draft grid

--- a/src/main/resources/static/correspondance.html
+++ b/src/main/resources/static/correspondance.html
@@ -258,17 +258,20 @@
 					<table class="document-table" id="draftTable">
 						<thead>
 							<tr>
+								<th style="display : none;">Correspondence Id</th>
 								<th>Category</th>
 								<th>Letter Number</th>
-								<th>Letter Date</th>
+								<th>From</th>
 								<th>To</th>
-								<th>Cc</th>
-								<th>Reference Letter</th>
 								<th>Subject</th>
 								<th>Required Response</th>
 								<th>Due Date</th>
+								<th>Project Name</th>
+								<th>Contract Name</th>
 								<th>Status</th>
+								<th>Department</th>
 								<th>Attachment</th>
+								<th>Type</th>
 							</tr>
 						</thead>
 						<tbody id="draftTableBody">
