--- a/src/main/resources/static/correspondance.html
+++ b/src/main/resources/static/correspondance.html
@@ -140,8 +140,8 @@
 								<th>
 									<div class="filter-container">
 										<input type="text" class="column-filter" data-column="7"
-											placeholder="Search" readonly> <span
-											class="filter-dropdown-toggle">▼</span>
+											placeholder="Search" readonly disabled> <span
+											class="filter-dropdown-toggle" disabled>▼</span>
 										<div class="filter-dropdown" data-column="7"></div>
 									</div>
 								</th>
