--- a/src/main/resources/static/document.html
+++ b/src/main/resources/static/document.html
@@ -315,11 +315,11 @@
 					<div class="error-message">This field is required</div>
 				</div>
 
-				<div class="form-group">
+				<!-- <div class="form-group">
 					<label for="sendCc">Cc:</label>
 					<select id="sendCc" name="sendCc[]" multiple="multiple" style="width: 100%"></select>
 					<div class="error-message">Please enter a valid email address</div>
-				</div>
+				</div>-->
 
 				<div class="form-group">
 					<label for="sendSubject">Subject: *</label> <input type="text"
