Fixing css for Drafts in correspondance

--- a/src/main/resources/static/correspondance.html
+++ b/src/main/resources/static/correspondance.html
@@ -282,7 +282,10 @@
 			</div>
 		</div>
 	</div>
-
+		<div id="loader" style="display: none;">
+			<div class="spinner"></div>
+			Uploading...
+		</div>
 	<!-- Upload Letter Modal -->
 	<div class="upload-modal" id="uploadModal">
 		<div class="upload-modal-content">
