Fixing Bulk upload

--- a/src/main/resources/static/document.html
+++ b/src/main/resources/static/document.html
@@ -593,6 +593,7 @@
 
 				<!-- Bulk Upload Tab -->
 				<div class="bulk-upload-options" id="bulkUploadTab">
+					<div id="bulkUploadDisplayMessage">Metadata Saved. Please Upload zip file.</div>
 					<div class="bulk-upload-links">
 						<a href="#" id="downloadTemplate">Download Excel Template</a> <a
 							href="#" id="uploadMetadata">Upload Metadata</a> <a href="#"
